<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"     
    android:minWidth="300dp"
  	
    >
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dp"    	      
    	>
	<TextView  
		android:id="@+id/add_new_track_d_tv_name"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"    
    	android:text="@string/add_track_d_name"    	   
    	android:textSize="14sp"    	
    	android:textStyle="bold"    
    	/> 
   	<EditText  
		android:id="@+id/add_new_track_d_et_name"
		android:maxLength="30"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"   	    
    	/>  
   	<TextView  
		android:id="@+id/add_new_track_d_tv_number"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"    
    	android:text="@string/add_track_d_number"    	   
    	android:textSize="14sp"    	
    	android:textStyle="bold"    
    	/> 
   	<EditText  
		android:id="@+id/add_new_track_d_et_number"
		android:numeric="integer"
		android:maxLength="2"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"   	    
    	/>    
	</LinearLayout>
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:orientation="horizontal"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:padding="10dp"    	      
    	>    
    <Button
 		android:id="@+id/add_new_track_d_btn_ok"
    	android:layout_height="fill_parent"
    	android:layout_width="fill_parent"
    	android:layout_weight="0.5"
    	android:text="@string/common_ok"
    	android:textSize="16sp"    
    	/>
    <Button
 		android:id="@+id/add_new_track_d_btn_cancel"
    	android:layout_height="fill_parent"
    	android:layout_width="fill_parent"
    	android:layout_weight="0.5"
    	android:text="@string/common_cancel"
    	android:textSize="16sp"    
    	/>    
    </LinearLayout>	
</LinearLayout>